crates/parse/src/tests/snapshots/call_nested.snap
---
source: crates/parse/src/tests.rs
assertion_line: 75
expression: "(test[1], ast, ast_string)"
---
- a(b(c))
- Ok:
    nodes:
      - kind:
          Call:
            name: a
            args:
              - kind:
                  Call:
                    name: b
                    args:
                      - kind:
                          Ident:
                            name: c
                            ty: ~
                    ty: ~
            ty: ~
- (a (b c))

