crates/parse/src/tests/snapshots/call_with_expr.snap
---
source: crates/parse/src/tests.rs
assertion_line: 75
expression: "(test[1], ast, ast_string)"
---
- "a(b + 1, c - 2 / 4)"
- Ok:
    nodes:
      - kind:
          Call:
            name: a
            args:
              - kind:
                  BinOp:
                    op: Add
                    lhs:
                      kind:
                        Ident:
                          name: b
                          ty: ~
                    rhs:
                      kind:
                        Lit:
                          value:
                            UInt64: 1
                          ty: ~
                    ty: ~
              - kind:
                  BinOp:
                    op: Sub
                    lhs:
                      kind:
                        Ident:
                          name: c
                          ty: ~
                    rhs:
                      kind:
                        BinOp:
                          op: Div
                          lhs:
                            kind:
                              Lit:
                                value:
                                  UInt64: 2
                                ty: ~
                          rhs:
                            kind:
                              Lit:
                                value:
                                  UInt64: 4
                                ty: ~
                          ty: ~
                    ty: ~
            ty: ~
- (a (+ b 1) (- c (/ 2 4)))

