crates/parse/src/tests/snapshots/extern_basic.snap
---
source: crates/parse/src/tests.rs
assertion_line: 89
expression: "(test[1], ast, ast_string)"
---
- "extern fn cos(x: float)"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: cos
              params:
                - - x
                  - Float
              ret_ty: Void
              is_extern: true
              module: main
              member_of: ~
            body: ~
- "(define (cos x:float))"

