crates/parse/src/tests/snapshots/func_def_bad_3.snap
---
source: crates/parse/src/tests.rs
assertion_line: 161
expression: "(test[1], ast, ast_string)"
---
- "fn a(b: int) -> not_a_type { b }"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: a
              args:
                - - b
                  - Int32
              ret_ty:
                Comp: not_a_type
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: b
                          ty: ~
                  ty: ~
- "(define (a b:int32) '(b))"

