crates/parse/src/tests/snapshots/func_def_empty.snap
---
source: crates/parse/src/tests.rs
assertion_line: 161
expression: "(test[1], ast, ast_string)"
---
- "fn a() {}"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: a
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list: []
                  ty: ~
- "(define (a) '()))"

