crates/parse/src/tests/snapshots/func_def_multi_expr.snap
---
source: crates/parse/src/tests.rs
assertion_line: 165
expression: "(test[1], ast, ast_string)"
---
- "\nfn a(b: int, c: int) -> int {\n    19 + a + 40\n    b + a\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::a"
              args:
                - - b
                  - Int32
                - - c
                  - Int32
              ret_ty: Int32
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              BinOp:
                                op: Add
                                lhs:
                                  kind:
                                    Lit:
                                      value:
                                        UInt64: 19
                                      ty: ~
                                rhs:
                                  kind:
                                    Ident:
                                      name: a
                                      ty: ~
                                ty: ~
                          rhs:
                            kind:
                              Lit:
                                value:
                                  UInt64: 40
                                ty: ~
                          ty: ~
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              Ident:
                                name: b
                                ty: ~
                          rhs:
                            kind:
                              Ident:
                                name: a
                                ty: ~
                          ty: ~
                  ty: ~
- "(define (main::a b:int32 c:int32) '((+ (+ 19 a) 40) (+ b a)))"

