crates/parse/src/tests/snapshots/func_def_no_ret_ty.snap
---
source: crates/parse/src/tests.rs
assertion_line: 165
expression: "(test[1], ast, ast_string)"
---
- "\nfn a(b: int) {\n    b\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::a"
              params:
                - - b
                  - Int32
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: b
                          ty: ~
                  ty: ~
- "(define (main::a b:int32) '(b))"

