crates/parse/src/tests/snapshots/func_def_redefine_fn.snap
---
source: crates/parse/src/tests.rs
assertion_line: 165
expression: "(test[1], ast, ast_string)"
---
- "\nfn foo() {}\nfn bar() {}\nfn foo() {}\n"
- Err:
    - message: "function `main::foo` can't be redefined"
      line: 4
      column: 1
- "function `main::foo` can't be redefined at 4:1"

