crates/parse/src/tests/snapshots/gt_lt_lt.snap
---
source: crates/parse/src/tests.rs
assertion_line: 169
expression: "(test[1], ast, ast_string)"
---
- a < b / 40
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Lt
            lhs:
              kind:
                Ident:
                  name: a
                  ty: ~
            rhs:
              kind:
                BinOp:
                  op: Div
                  lhs:
                    kind:
                      Ident:
                        name: b
                        ty: ~
                  rhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 40
                        ty: ~
                  ty: ~
            ty: ~
- (< a (/ b 40))

